finalize method of multiple choice assessment

--- a/pull-tests.ipynb
+++ b/pull-tests.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d989539b-9522-47c0-aca7-14115980c78e",
+   "metadata": {},
+   "source": [
+    "# INSTALLING THE TESTS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5679de6b-c647-4341-9790-b77293a6c690",
