--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# README\n",
+    "Generic testing document."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -38,21 +46,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-03@22:05:48|model.device] Starting timer.\n",
+      "[2024-05-06@17:47:00|model.device] Starting timer.\n",
       "Configuring torch device...\n",
       "Using device: cuda:0 aka cuda:0\n",
-      "[2024-04-03@22:05:48|model.device] Time elapsed: 31ms\n",
-      "[2024-04-03@22:05:48|model.tokenizer] Starting timer.\n",
-      "[2024-04-03@22:05:48|model.tokenizer] Time elapsed: 218ms\n",
-      "[2024-04-03@22:05:48|model.model] Starting timer.\n",
+      "[2024-05-06@17:47:00|model.device] Time elapsed: 44ms\n",
+      "[2024-05-06@17:47:00|model.tokenizer] Starting timer.\n",
+      "[2024-05-06@17:47:00|model.tokenizer] Time elapsed: 249ms\n",
+      "[2024-05-06@17:47:00|model.model] Starting timer.\n",
       "Obtaining model...\n",
-      "[2024-04-03@22:05:51|model.model] Time elapsed: 3s 456ms\n"
+      "[2024-05-06@17:47:34|model.model] Time elapsed: 33s 327ms\n"
      ]
     }
    ],
    "source": [
     "# options: 350M, 2B, 6B, 16B\n",
-    "model = Model(ModelFamily.CodeGen1.mono[\"350M\"])\n",
+    "model = Model(ModelFamily.CodeGen1.mono[\"2B\"])\n",
     "model.configure(time=True)"
    ]
   },
@@ -72,76 +80,28 @@
       "Token count in input: 6\n",
       "Token count in input: 6\n",
       "Token count in input: 6\n",
-      "P Sum: 8806.827020080465\n",
-      "Token 1: P=0.9989427039449656, logit=6.850982666015625\n",
-      "Running P: 0.9880051856011446\n",
-      "P Sum: 22198.219440809764\n",
-      "Token 2: P=0.999887651219, logit=9.093790054321289\n",
-      "Running P: 0.9878941844229207\n",
-      "P Sum: 33895.8153472834\n",
-      "Token 3: P=0.9999977363622614, logit=12.99853515625\n",
-      "Running P: 0.987891948188363\n",
-      "P Sum: 28094.63493678194\n",
-      "Token 4: P=0.9999317177283681, logit=9.591792106628418\n",
-      "Running P: 0.9878244926820139\n",
-      "P Sum: 24723.28350280061\n",
-      "Token 5: P=0.9997807986454794, logit=8.425300598144531\n",
-      "Running P: 0.9876079602151894\n",
-      "P Sum: 23382.946084198873\n",
-      "Token 6: P=0.9999359508693182, logit=9.65579605102539\n",
-      "Running P: 0.9875447047838831\n",
-      "P Sum: 41081.17504740216\n",
-      "Token 7: P=0.9999878534683403, logit=11.31845474243164\n",
-      "Running P: 0.9875327095408611\n",
-      "\n",
-      "P Sum: 25624.29273295107\n",
-      "Token 1: P=0.9999404014907451, logit=9.72782039642334\n",
-      "Running P: 0.9889919592619351\n",
-      "P Sum: 34301.39770785114\n",
-      "Token 2: P=0.9999960893207924, logit=12.45179557800293\n",
-      "Running P: 0.9889880916316435\n",
-      "P Sum: 34302.875756258014\n",
-      "Token 3: P=0.9999990232341197, logit=13.839017868041992\n",
-      "Running P: 0.9889871256218196\n",
-      "P Sum: 17849.881790783576\n",
-      "Token 4: P=0.9998832528924173, logit=9.055383682250977\n",
-      "Running P: 0.9888716642354667\n",
-      "P Sum: 33310.84072334717\n",
-      "Token 5: P=0.9999821413269829, logit=10.933003425598145\n",
-      "Running P: 0.9888540042997592\n",
-      "\n",
-      "P Sum: 19767.68501104467\n",
-      "Token 1: P=0.798577329298198, logit=1.377426266670227\n",
-      "Running P: 0.7913897187516128\n",
-      "P Sum: 22306.01657244211\n",
-      "Token 2: P=0.999969411956069, logit=10.39487075805664\n",
-      "Running P: 0.7913655116881291\n",
-      "P Sum: 17743.265529678647\n",
-      "Token 3: P=0.9997887863299497, logit=8.46242904663086\n",
-      "Running P: 0.7911983644740542\n",
-      "P Sum: 22413.9052512767\n",
-      "Token 4: P=0.9999971331855151, logit=12.762306213378906\n",
-      "Running P: 0.7911960962551225\n",
-      "P Sum: 42261.07582832952\n",
-      "Token 5: P=0.999999945486597, logit=16.72481918334961\n",
-      "Running P: 0.791196053124331\n",
-      "\n",
-      "P Sum: 25624.29273295107\n",
-      "Token 1: P=0.9999404014907451, logit=9.72782039642334\n",
-      "Running P: 0.9889919592619351\n",
-      "P Sum: 34301.39770785114\n",
-      "Token 2: P=0.9999960893207924, logit=12.45179557800293\n",
-      "Running P: 0.9889880916316435\n",
-      "P Sum: 35327.37265087613\n",
-      "Token 3: P=0.9999966831392301, logit=12.616488456726074\n",
-      "Running P: 0.9889848112958404\n",
-      "P Sum: 14735.47760912308\n",
-      "Token 4: P=0.9999028764425747, logit=9.239429473876953\n",
-      "Running P: 0.9888887575727278\n",
-      "P Sum: 39216.75496911755\n",
-      "Token 5: P=0.9996939638479244, logit=8.091501235961914\n",
-      "Running P: 0.9885861218625294\n",
-      "\n",
+      "Token 1: P=0.0008649470400996506, logit=28.836490631103516\n",
+      "Token 2: P=2.8487263534771046e-06, logit=116.56971740722656\n",
+      "Token 3: P=3.525448846630752e-05, logit=119.57723236083984\n",
+      "Token 4: P=4.0011909732129425e-05, logit=109.87080383300781\n",
+      "Token 5: P=3.900055162375793e-05, logit=120.9642105102539\n",
+      "Token 6: P=0.00010875055886572227, logit=109.5257797241211\n",
+      "Token 7: P=2.342500738450326e-05, logit=118.17300415039062\n",
+      "Token 1: P=0.00035107971052639186, logit=119.63996887207031\n",
+      "Token 2: P=0.0002885882568079978, logit=121.21388244628906\n",
+      "Token 3: P=6.494770059362054e-05, logit=121.79008483886719\n",
+      "Token 4: P=3.481068051769398e-05, logit=120.9379653930664\n",
+      "Token 5: P=7.137858574424172e-06, logit=115.5325698852539\n",
+      "Token 1: P=8.296918281303078e-07, logit=55.295833587646484\n",
+      "Token 2: P=0.0006681531085632741, logit=110.99647521972656\n",
+      "Token 3: P=8.743535727262497e-05, logit=79.27650451660156\n",
+      "Token 4: P=2.195153501816094e-05, logit=121.3895263671875\n",
+      "Token 5: P=0.0001104134862544015, logit=119.40422058105469\n",
+      "Token 1: P=0.00035107971052639186, logit=119.63996887207031\n",
+      "Token 2: P=0.0002885882568079978, logit=121.21388244628906\n",
+      "Token 3: P=1.911372964968905e-05, logit=121.20008087158203\n",
+      "Token 4: P=0.00010838781599886715, logit=119.09083557128906\n",
+      "Token 5: P=1.462558770981559e-06, logit=113.80375671386719\n",
       "3\n"
      ]
     }
