--- a/testing.ipynb
+++ b/testing.ipynb
@@ -46,21 +46,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-06@17:47:00|model.device] Starting timer.\n",
+      "[2024-05-10@19:58:34|model.device] Starting timer.\n",
       "Configuring torch device...\n",
       "Using device: cuda:0 aka cuda:0\n",
-      "[2024-05-06@17:47:00|model.device] Time elapsed: 44ms\n",
-      "[2024-05-06@17:47:00|model.tokenizer] Starting timer.\n",
-      "[2024-05-06@17:47:00|model.tokenizer] Time elapsed: 249ms\n",
-      "[2024-05-06@17:47:00|model.model] Starting timer.\n",
+      "[2024-05-10@19:58:35|model.device] Time elapsed: 40ms\n",
+      "[2024-05-10@19:58:35|model.tokenizer] Starting timer.\n",
+      "[2024-05-10@19:58:35|model.tokenizer] Time elapsed: 193ms\n",
+      "[2024-05-10@19:58:35|model.model] Starting timer.\n",
       "Obtaining model...\n",
-      "[2024-05-06@17:47:34|model.model] Time elapsed: 33s 327ms\n"
+      "[2024-05-10@19:58:38|model.model] Time elapsed: 3s 250ms\n"
      ]
     }
    ],
    "source": [
     "# options: 350M, 2B, 6B, 16B\n",
-    "model = Model(ModelFamily.CodeGen1.mono[\"2B\"])\n",
+    "model = Model(ModelFamily.CodeGen1.mono[\"350M\"])\n",
     "model.configure(time=True)"
    ]
   },
@@ -74,35 +74,37 @@
      "output_type": "stream",
      "text": [
       "Choices:  [\"prints 'hello world' to the terminal\", 'prints values from 1 to 10', 'computes first 10 prime numbers', 'prints values from 0 to 22']\n",
-      "Tokenizing input prompt...\n",
-      "Token count in input: 84\n",
-      "Token count in input: 8\n",
-      "Token count in input: 6\n",
-      "Token count in input: 6\n",
-      "Token count in input: 6\n",
-      "Token 1: P=0.0008649470400996506, logit=28.836490631103516\n",
-      "Token 2: P=2.8487263534771046e-06, logit=116.56971740722656\n",
-      "Token 3: P=3.525448846630752e-05, logit=119.57723236083984\n",
-      "Token 4: P=4.0011909732129425e-05, logit=109.87080383300781\n",
-      "Token 5: P=3.900055162375793e-05, logit=120.9642105102539\n",
-      "Token 6: P=0.00010875055886572227, logit=109.5257797241211\n",
-      "Token 7: P=2.342500738450326e-05, logit=118.17300415039062\n",
-      "Token 1: P=0.00035107971052639186, logit=119.63996887207031\n",
-      "Token 2: P=0.0002885882568079978, logit=121.21388244628906\n",
-      "Token 3: P=6.494770059362054e-05, logit=121.79008483886719\n",
-      "Token 4: P=3.481068051769398e-05, logit=120.9379653930664\n",
-      "Token 5: P=7.137858574424172e-06, logit=115.5325698852539\n",
-      "Token 1: P=8.296918281303078e-07, logit=55.295833587646484\n",
-      "Token 2: P=0.0006681531085632741, logit=110.99647521972656\n",
-      "Token 3: P=8.743535727262497e-05, logit=79.27650451660156\n",
-      "Token 4: P=2.195153501816094e-05, logit=121.3895263671875\n",
-      "Token 5: P=0.0001104134862544015, logit=119.40422058105469\n",
-      "Token 1: P=0.00035107971052639186, logit=119.63996887207031\n",
-      "Token 2: P=0.0002885882568079978, logit=121.21388244628906\n",
-      "Token 3: P=1.911372964968905e-05, logit=121.20008087158203\n",
-      "Token 4: P=0.00010838781599886715, logit=119.09083557128906\n",
-      "Token 5: P=1.462558770981559e-06, logit=113.80375671386719\n",
-      "3\n"
+      "init = 0.0015%\n",
+      "prob = 0.1187%\n",
+      "prob = 0.0073%\n",
+      "prob = 0.0208%\n",
+      "prob = 0.0064%\n",
+      "prob = 0.0014%\n",
+      "prob = 0.0123%\n",
+      "prob = 0.0008%\n",
+      "overall = 0.000000000000000000000000000000023241246652254307163719878231634507057335395583300996692903378519561401772084161730614824%\n",
+      "init = 0.0015%\n",
+      "prob = 0.0024%\n",
+      "prob = 0.0032%\n",
+      "prob = 0.0022%\n",
+      "prob = 0.0041%\n",
+      "prob = 0.0020%\n",
+      "overall = 0.000000000000000000000000019810142833179808423708928452504930693739751317462253127874011397448411955779512538811104604974%\n",
+      "init = 0.0018%\n",
+      "prob = 0.0001%\n",
+      "prob = 0.0661%\n",
+      "prob = 0.0116%\n",
+      "prob = 0.0372%\n",
+      "prob = 0.0527%\n",
+      "overall = 0.000000000000000000000028319656298544513007787001908833752774128995244739911443856972533134053193748513876926153898239136%\n",
+      "init = 0.0015%\n",
+      "prob = 0.0024%\n",
+      "prob = 0.0032%\n",
+      "prob = 0.0005%\n",
+      "prob = 0.0082%\n",
+      "prob = 0.0000%\n",
+      "overall = 0.000000000000000000000000000225408666049081861066679704659925297474563477214086961810001736271474249615441587391018174458%\n",
+      "3 ---> prints values from 0 to 22\n"
      ]
     }
    ],
@@ -127,7 +129,7 @@
     "    time=False,\n",
     "    strategy=MultipleChoiceStrategy.MULTIPLY\n",
     ")\n",
-    "print(idx)\n",
+    "print(idx, \"--->\", targets[idx])\n",
     "\n",
     "# 350M FIRST_BRANCH: 2\n",
     "# 350M LOGIT_AVERAGE: 1\n",
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -144,58 +146,58 @@
      "output_type": "stream",
      "text": [
       "Choices:  [\"prints 'hello world' to the terminal\", 'prints values from 1 to 10', 'computes first 10 prime numbers', 'prints values from 0 to 22']\n",
-      "Token count in input: 84\n",
       "Target: prints 'hello world' to the terminal\n",
-      "Token count in input: 8\n",
-      "Base score: tensor([4.5035], device='cuda:0')\n",
-      "initial score = 4.503489017486572\n",
-      "Inner score: tensor([6.8510], device='cuda:0')\n",
-      "Inner score: tensor([9.0938], device='cuda:0')\n",
-      "Inner score: tensor([12.9985], device='cuda:0')\n",
-      "Inner score: tensor([9.5918], device='cuda:0')\n",
-      "Inner score: tensor([8.4253], device='cuda:0')\n",
-      "Inner score: tensor([9.6558], device='cuda:0')\n",
-      "Inner score: tensor([11.3185], device='cuda:0')\n",
-      "Final score = 72.43814039230347\n",
-      "Normalized = 9.054767549037933\n",
+      "tensor([[17190,   705, 31373,   995,     6,   284,   262, 12094]],\n",
+      "       device='cuda:0')\n",
+      "Base score: tensor([52.8601], device='cuda:0')\n",
+      "initial score = 52.8601188659668\n",
+      "Inner score: tensor([28.8365], device='cuda:0')\n",
+      "Inner score: tensor([116.5697], device='cuda:0')\n",
+      "Inner score: tensor([119.5772], device='cuda:0')\n",
+      "Inner score: tensor([109.8708], device='cuda:0')\n",
+      "Inner score: tensor([120.9642], device='cuda:0')\n",
+      "Inner score: tensor([109.5258], device='cuda:0')\n",
+      "Inner score: tensor([118.1730], device='cuda:0')\n",
+      "Final score = 776.3773574829102\n",
+      "Normalized = 97.04716968536377\n",
       "\n",
       "Target: prints values from 1 to 10\n",
-      "Token count in input: 6\n",
-      "Base score: tensor([4.5035], device='cuda:0')\n",
-      "initial score = 4.503489017486572\n",
-      "Inner score: tensor([9.7278], device='cuda:0')\n",
-      "Inner score: tensor([12.4518], device='cuda:0')\n",
-      "Inner score: tensor([13.8390], device='cuda:0')\n",
-      "Inner score: tensor([9.0554], device='cuda:0')\n",
-      "Inner score: tensor([10.9330], device='cuda:0')\n",
-      "Final score = 60.510509967803955\n",
-      "Normalized = 10.085084994633993\n",
+      "tensor([[17190,  3815,   422,   352,   284,   838]], device='cuda:0')\n",
+      "Base score: tensor([52.8601], device='cuda:0')\n",
+      "initial score = 52.8601188659668\n",
+      "Inner score: tensor([119.6400], device='cuda:0')\n",
+      "Inner score: tensor([121.2139], device='cuda:0')\n",
+      "Inner score: tensor([121.7901], device='cuda:0')\n",
+      "Inner score: tensor([120.9380], device='cuda:0')\n",
+      "Inner score: tensor([115.5326], device='cuda:0')\n",
+      "Final score = 651.9745903015137\n",
+      "Normalized = 108.66243171691895\n",
       "\n",
       "Target: computes first 10 prime numbers\n",
-      "Token count in input: 6\n",
-      "Base score: tensor([4.7014], device='cuda:0')\n",
-      "initial score = 4.701431751251221\n",
-      "Inner score: tensor([1.3774], device='cuda:0')\n",
-      "Inner score: tensor([10.3949], device='cuda:0')\n",
-      "Inner score: tensor([8.4624], device='cuda:0')\n",
-      "Inner score: tensor([12.7623], device='cuda:0')\n",
-      "Inner score: tensor([16.7248], device='cuda:0')\n",
-      "Final score = 54.42328321933746\n",
-      "Normalized = 9.07054720322291\n",
+      "tensor([[5589, 1769,  717,  838, 6994, 3146]], device='cuda:0')\n",
+      "Base score: tensor([49.5089], device='cuda:0')\n",
+      "initial score = 49.50886535644531\n",
+      "Inner score: tensor([55.2958], device='cuda:0')\n",
+      "Inner score: tensor([110.9965], device='cuda:0')\n",
+      "Inner score: tensor([79.2765], device='cuda:0')\n",
+      "Inner score: tensor([121.3895], device='cuda:0')\n",
+      "Inner score: tensor([119.4042], device='cuda:0')\n",
+      "Final score = 535.8714256286621\n",
+      "Normalized = 89.31190427144368\n",
       "\n",
       "Target: prints values from 0 to 22\n",
-      "Token count in input: 6\n",
-      "Base score: tensor([4.5035], device='cuda:0')\n",
-      "initial score = 4.503489017486572\n",
-      "Inner score: tensor([9.7278], device='cuda:0')\n",
-      "Inner score: tensor([12.4518], device='cuda:0')\n",
-      "Inner score: tensor([12.6165], device='cuda:0')\n",
-      "Inner score: tensor([9.2394], device='cuda:0')\n",
-      "Inner score: tensor([8.0915], device='cuda:0')\n",
-      "Final score = 56.63052415847778\n",
-      "Normalized = 9.43842069307963\n",
+      "tensor([[17190,  3815,   422,   657,   284,  2534]], device='cuda:0')\n",
+      "Base score: tensor([52.8601], device='cuda:0')\n",
+      "initial score = 52.8601188659668\n",
+      "Inner score: tensor([119.6400], device='cuda:0')\n",
+      "Inner score: tensor([121.2139], device='cuda:0')\n",
+      "Inner score: tensor([121.2001], device='cuda:0')\n",
+      "Inner score: tensor([119.0908], device='cuda:0')\n",
+      "Inner score: tensor([113.8038], device='cuda:0')\n",
+      "Final score = 647.8086433410645\n",
+      "Normalized = 107.96810722351074\n",
       "\n",
-      "Best: prints values from 1 to 10 10.085084994633993\n"
+      "Best: prints values from 1 to 10 108.66243171691895\n"
      ]
     }
    ],
@@ -233,6 +235,9 @@
     "    for target in targets:\n",
     "        print(\"Target:\", target)\n",
     "        target_tokens = model.tokenize(target)[\"input_ids\"]\n",
+    "        print(target_tokens)\n",
+    "        #print([print(f\"{x} -> {model.decode([ x ])!r}\") for x in [x.item() for x in target_tokens[0]]])\n",
+    "        #break\n",
     "        print(\"Base score:\", base_logits[:, target_tokens[0, 0]])\n",
     "        score = base_logits[:, target_tokens[0, 0]].item()\n",
     "        running_inputs = inputs[\"input_ids\"]\n",
